[tool.poetry]
name = "fastconfig"
version = "0.2.0"
description = "A lightweight way to find the project root and load config"
authors = ["kyoto7250 <kyoto7250@aol.com>"]
homepage = "https://github.com/kyoto7250"
repository = "https://github.com/kyoto7250/fastconfig"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.267"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pydocstyle = "^6.3.0"
mkdocstrings-python = "^1.0.0"
mkdocs-material = "^9.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F"]
ignore = ["E501"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.pydocstyle]
match= "(?!test_).*\\.py"
